--- a/src/main/resources/frontend/src/Divisions/LandingAndProductPage/components/mainsearch/mainsearch.css
+++ b/src/main/resources/frontend/src/Divisions/LandingAndProductPage/components/mainsearch/mainsearch.css
@@ -1,117 +1,146 @@
 .container {
-  height: 400px;
+  height: 100%;
   justify-content: center;
   align-items: center;
   display: flex;
+  flex: 50%;
 }
 .search-box {
-  width: 180vh;
-  height: 20vh;
-  display: block;
+  height: 90%;
+  display: flex;
   justify-content: center;
   align-items: center;
+  width: 90%;
 }
 .main-search-box {
   background-color: white;
-  width: 100%;
-  height: 18vh;
-  border-radius: 10px;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  height: 80%;
+  width: 80%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px;
   justify-content: center;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
   position: relative;
-  display: block;
+  display: flex;
 }
 .searchhbtn {
+  flex: 40%;
   height: 9vh;
-  display: flex;
+  margin-right: 5%;
+  display: block;
   justify-content: center;
   align-items: center;
 }
 .searchtext {
   position: relative;
   margin-bottom: 15px;
-  font-size: 30px;
+  font-size: 3vh;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
+  color: black;
 }
 .searchtext span {
   color: #8467f3;
 }
 .howuse {
-  height: 500px;
+  flex: 50%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100%;
 }
 .howusetext {
-  height: 12vh;
-  font-size: 40px;
+  padding: 5px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
   position: relative;
   z-index: 1;
+  color: black;
 }
 .cardarea {
-  display: flex;
+  display: block;
+  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px; */
   justify-content: center;
   align-items: center;
-  color: white;
+  height: 80%;
+  width: 80%;
+  /* background-color: white; */
+  position: relative;
+}
+.cardss {
+  width: 97.5%;
+  height: 90%;
+  justify-content: center;
+  align-items: center;
+  display: block;
+}
+.cardss1 {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 50%;
+}
+.cardss2 {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 50%;
 }
 .usecard1 {
+  flex: 45%;
+  height: 85%;
   display: block;
   z-index: 1;
   margin-left: 25px;
-  border-radius: 15px;
   background-color: white;
-  width: 30vh;
-  height: 30vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px;
   align-items: center;
   justify-content: center;
 }
 .usecard2 {
+  flex: 45%;
+  height: 85%;
   display: block;
   z-index: 1;
   margin-left: 25px;
-  border-radius: 15px;
   background-color: white;
-  width: 30vh;
   align-items: center;
   justify-content: center;
-  height: 30vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px;
 }
 .usecard3 {
+  flex: 45%;
+  height: 85%;
   display: block;
   z-index: 1;
   margin-left: 25px;
-  border-radius: 15px;
   background-color: white;
-  width: 30vh;
   align-items: center;
   justify-content: center;
-  height: 30vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px;
 }
 .usecard4 {
+  flex: 45%;
+  height: 85%;
   display: block;
   z-index: 1;
   margin-left: 25px;
-  border-radius: 15px;
   background-color: white;
-  width: 30vh;
   align-items: center;
   justify-content: center;
-  height: 30vh;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 20px;
   z-index: 0;
 }
 .usecard1 img {
