--- a/src/main/resources/frontend/src/Divisions/LandingAndProductPage/components/product/product.css
+++ b/src/main/resources/frontend/src/Divisions/LandingAndProductPage/components/product/product.css
@@ -1,11 +1,35 @@
 .productcard {
-  height: 42vh;
-  width: 40vh;
-  border-radius: 10px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  height: 45vh;
+  width: 45vh;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 12px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 0.5px;
+}
+.carddtop {
+  display: flex;
+  padding-top: 10px;
+}
+.carddtop Button {
+  flex: 30%;
+  margin-right: 10px;
+}
+.deetails0 {
+  flex: 70%;
+  height: 5vh;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  padding: 10px;
+  padding-left: 30px;
+  font-size: 22px;
+  font-weight: bold;
+}
+.bikeeimg {
+  height: 60%;
+}
+.bikeeimg img {
+  height: 100%;
 }
 .productcard a {
   display: flex;
@@ -13,33 +37,29 @@
   align-items: center;
   height: 60%;
 }
-.deetails0 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-weight: bold;
-}
-.deetails01 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 30px;
-}
 .deetails1 {
-  display: flex;
+  display: block;
+  padding-top: 10px;
+  padding-left: 20px;
+  font-size: 15px;
+  color: #727272;
+  flex: 80%;
 }
 .deetails1 div {
-  flex: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 3px;
+}
+.deetails01 {
+  font-size: 22px;
+  color: black;
 }
 .deetails2 {
+  padding-top: 20px;
+  padding-right: 20px;
+  justify-content: center;
+  align-items: center;
+  flex: 20%;
   display: flex;
 }
-.deetails2 Button {
-  flex: 50%;
-  margin: 25px;
-  margin-top: 7px;
+.cardbody {
+  display: flex;
 }
